<?xml version="1.0"?>
<package>
  <name>aruco_tool</name>
  <version>0.0.0</version>
  <description>The aruco_tool package</description>

  <maintainer email="yiming.wang@qmul.ac.uk">Yiming Wang</maintainer>

  <license>GPL</license>


<buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>cv_camera</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>resource_retriever</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>cv_camera</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>exp_setup</run_depend>

</package>
